# squadra

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  azure-pipelines.yml  pyproject.toml
.devcontainer/: .env.example  authorized_keys-stub  dev-entrypoint.sh  devcontainer.json  docker-compose.yml  sshd.conf
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: dev-container.md
docs/adr/: adr-0001-board-provider-seam.md  adr-0002-sandbox-containment-fleet-host.md
docs/assets/icons/: favicon-head-snippet.html  site.webmanifest
docs/assets/pages/: brand-kit.html  landing.html
docs/design/: board-provider-seam.md
docs/fleet-host/: SMOKE.md  cloud-init.fleet-host.yaml  fleet-host-activate.sh  goss.yaml
scripts/: check-pyright-pin.sh
scripts/devbox/: config.example.sh  config.sh  lib.sh  rebuild.sh  stop.sh  tmux.conf  up.sh
src/flotilla/: __init__.py  _resources.py  board.py  cleanup.py  cli.py  config.py  constants.py  domain.py  dry_run.py  engines.py  git_host.py  manifest.py  repo.py  sandbox.py  scaffold.py  secrets.py  status.py  supervisor.py  units.py  worktree.py
src/flotilla/_scripts/: fleet-autostart.sh  fleet-cron.example  fleet-tick.sh  fleetctl.sh  runner-wrap.sh
src/flotilla/_templates/: cleanup-skill.md  runner-skill.md
src/flotilla/_units/: flotilla.service  flotilla.timer
src/squadra/: __init__.py  _resources.py  board.py  cleanup.py  cli.py  config.py  constants.py  domain.py  dry_run.py  engines.py  manifest.py  repo.py  sandbox.py  scaffold.py  secrets.py  status.py  supervisor.py  units.py  worktree.py
src/squadra/_scripts/: fleet-tick.sh  fleetctl.sh  runner-wrap.sh
src/squadra/_templates/: cleanup-skill.md  runner-skill.md
src/squadra/_units/: squadra.service  squadra.timer
tests/: conftest.py  test_board.py  test_board_contract.py  test_cleanup.py  test_cli.py  test_dry_run.py  test_engines.py  test_git_host.py  test_lifecycle_engine.py  test_manifest.py  test_repo.py  test_runner_wrap.py  test_sandbox.py  test_scaffold.py  test_secrets.py  test_status.py  test_supervisor_adapters.py  test_supervisor_auth_preflight.py  test_supervisor_claim.py  test_supervisor_dry_run.py  test_supervisor_finalize_reap.py  test_supervisor_lifecycle.py  test_supervisor_pat_preflight.py  test_units.py  test_worktree.py
tests/contract/: conftest.py  test_ado_adapter_conformance.py  test_board_contract.py  test_cleanup_contract.py  test_sandbox_contract.py  test_supervisor_provider_blindness.py  test_worktree_contract.py
tests/helpers/: board_fakes.py  cleanup_fakes.py  fleet_fakes.py  sandbox_fakes.py  worktree_fakes.py
tests/scripts/: run-runner-wrap-tests.sh
