[project]
name = "squadra"
version = "0.1.0a1"
description = "Deterministic supervisor + per-slice runner machinery for an AFK, board-driven Claude implementation fleet."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Rich Inman, PhD" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "claude",
    "fleet",
    "supervisor",
    "automation",
    "azure-devops",
    "github",
    "afk",
    "agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Build Tools",
]
# Pure standard library — the fleet machinery has no third-party runtime deps.
dependencies = []

[project.urls]
Homepage = "https://github.com/rinman24/squadra"
Repository = "https://github.com/rinman24/squadra"

[project.scripts]
squadra = "squadra.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/squadra"]

[tool.hatch.build.targets.sdist]
include = ["src/squadra", "tests", "README.md", "CLAUDE.md"]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
extend-select = [
    "D",    # pydocstyle
    "PL",   # Pylint
    "I",    # isort (import sorting / grouping)
    "TID",  # flake8-tidy-imports (banned-api, import hygiene)
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["squadra", "tests"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Test helpers often use non-imperative fixture docstrings; multi-line format rules are noisy.
"tests/*" = ["D100", "D103", "D401", "D205", "D209", "PLR2004", "PLR0913"]
# Empty package markers don't need docstrings.
"**/__init__.py" = ["D104"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
include = ["src", "tests"]
extraPaths = [".", "src"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
